workspace = { members = ["crates/goldy_core"] }

[package]
name = "goldy"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.33" }
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.4.3"

goldy_core = { path = "./crates/goldy_core" }
