[package]
name = "goldy_box"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32"
derive_builder = "0.20"

goldy_core = { path = "../goldy_core/" }
goldy_storage = { path = "../goldy_storage/" }
