[package]
name = "goldy_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
num-traits = "0.2"
thiserror = "1"
derive_builder = "0.20"
uuid = { version = "1", features = ["v4", "macro-diagnostics"] }

[dev-dependencies]
assert_approx_eq = "1"
