[package]
name = "goldy_potential"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.20"

goldy_storage = { path = "../goldy_storage/" }
goldy_core = { path = "../goldy_core/" }
goldy_box = { path = "../goldy_box/" }

[dev-dependencies]
assert_approx_eq = "1"
nalgebra = "0.32"
