[package]
name = "goldy_propagator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goldy_thermo = { path = "../goldy_thermo/" }
goldy_storage = { path = "../goldy_storage/" }
goldy_potential = { path = "../goldy_potential/" }
goldy_core = { path = "../goldy_core/" }
goldy_box = { path = "../goldy_box/" }
