[package]
name = "goldy_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.20"
nalgebra = { version = "0.32" }
uuid = { version = "1.8.0", features = ["v4", "macro-diagnostics"] }

goldy_core = { path = "../goldy_core/" }
