[package]
name = "goldy_thermo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
nalgebra = { version = "0.32" }
assert_approx_eq = "1"

goldy_core = { path = "../goldy_core/" }
goldy_storage = { path = "../goldy_storage/" }
